<resources>
    <string name="app_name">Rafian</string>
    <string name="title_activity_class_ke_dua">ClassKeDua</string>
    <string name="perintah">Masukan Minimal 3 Huruf</string>
    <string name="hello">Hello Word, Kotak Dialog</string>
    <string name="toastTextBtn">Panggil Toast</string>
    <string name="exitTextBtn">Keluar Aplikasi</string>
    <string name="listDialogTextBtn">Pangglil List Dialog</string>
    <string name="checkBox">checkBox ini : tidak Dicentang</string>
    <string name="startBtn">Start</string>
    <string name="StopBtn">Stop</string>
</resources>
