<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <Button
        android:id="@+id/toastBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/toastTextBtn"></Button>
    <Button
        android:id="@+id/listDialogBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listDialogTextBtn"></Button>
    <Button
        android:id="@+id/exitBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exitTextBtn"></Button>
</LinearLayout>
